--- a/src/pages/call/call.html
+++ b/src/pages/call/call.html
@@ -7,9 +7,9 @@
 </ion-header>
 
 <ion-content padding>
-    The world is your oyster.
-    <p>
+    <h2>
         Hi! {{userName}}
-    </p>
+    </h2>
     <video id="my-video" autoplay></video>
+    <video id="other-video" autoplay></video>
 </ion-content>
