--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,8 +14,9 @@
   <ion-list>
 
     <ion-item>
-      <ion-input type="text" [(ngModel)]="userName" placeholder="Username"></ion-input>
+      <ion-input type="text" [(ngModel)]="userId" placeholder="userId"></ion-input>
     </ion-item>
     <button ion-button (click)="login()">Login</button>
+
   </ion-list>
 </ion-content>
